--- a/app/assets/stylesheets/news_post.css.scss
+++ b/app/assets/stylesheets/news_post.css.scss
@@ -1,14 +1,3 @@
-.wrapper {
-  background: #fff;
-  color: rgb(68, 68, 68);
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  border: 1px solid #ddd;
-  border-top: 0;
-}
-.hero div.hero-feature-post {
-  top: 60%;
-}
-
 .news-post {
   font-family: Georgia;
   .news-post-content {
@@ -27,4 +16,8 @@
       }
     }
   }
+}
+
+md-content {
+  padding: 0 !important;
 }
