--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -40,71 +40,40 @@
       }
     </script>
 
-.home-toolbar
-  .home-toolbar-show-filters-button-container
-    .home-toolbar-show-filters-button#home-toolbar-show-filters
-      = t(".filter")
 
-  .home-toolbar-filters.home-toolbar-filters-mobile-hidden#home-toolbar-filters
-    .toggle-container.home-toolbar-toggle-container.hidden-tablet
-      .toggle.with-borders{data: {toggle: '#home-toolbar-categories-menu'}}
-        .toggle-header-container
-          .toggle-header
-            - if @selected_category
-              = @selected_category.display_name(I18n.locale)
-            - else
-              = t("homepage.filters.all_categories")
-
-          = icon_tag("dropdown", ["icon-dropdown"])
-      #home-toolbar-categories-menu.toggle-menu
-        = link_to t("homepage.filters.all_categories"), marketplace_category_path(category: "all")
+- content_for :sidenav_left do
+  - if @show_categories
+    .row
+      .col-12
+        = link_to "All Categories", search_path(params.merge({category: "all"})), :class => "home-categories-main #{if @selected_category.nil? then 'selected' end}"
         - @main_categories.each do |category|
-          = link_to category.display_name(I18n.locale), marketplace_category_path(category: category)
+          - show_subcategories = show_subcategory_list(category, Maybe(@selected_category).id.to_i.or_else(nil))
+          = link_to category.display_name(I18n.locale), marketplace_category_path({category: category}), :class => "home-categories-main #{if show_subcategories then 'selected' end} #{if category.has_subcategories? then 'has-subcategories' end}", :data => {category: category.id}
           - if category.children
-            - category.children.each do |child|
-              - is_selected = @selected_category == child
-              = link_to child.display_name(I18n.locale), marketplace_category_path(category: child), :class => "toggle-menu-subitem"
+            - if show_subcategories
+              - category.children.each do |child|
+                - is_selected = @selected_category == child
+                = link_to child.display_name(I18n.locale), marketplace_category_path({category: child}), :class => "home-categories-sub #{if is_selected then 'selected' end}", :data => {:"sub-category" =>child.id}
 
-    / Filters
-    .hidden-tablet
-      - # Filters will be relocated to #desktop-filters when in desktop
-      #filters
-        = render :partial => "filters", :locals => { show_price_filter: show_price_filter, show_custom_fields: @show_custom_fields, filters: filters }
-
+      #desktop-filters
+        #filters
+          = render :partial => "filters", :locals => { show_price_filter: show_price_filter, show_custom_fields: @show_custom_fields, filters: filters }
 .row
-  .col-3.visible-tablet
-    - if @show_categories
-      .row.home-categories-container
-        .col-12
-          = link_to "All Categories", search_path(params.merge({category: "all"})), :class => "home-categories-main #{if @selected_category.nil? then 'selected' end}"
-          - @main_categories.each do |category|
-            - show_subcategories = show_subcategory_list(category, Maybe(@selected_category).id.to_i.or_else(nil))
-            = link_to category.display_name(I18n.locale), marketplace_category_path({category: category}), :class => "home-categories-main #{if show_subcategories then 'selected' end} #{if category.has_subcategories? then 'has-subcategories' end}", :data => {category: category.id}
-            - if category.children
-              - if show_subcategories
-                - category.children.each do |child|
-                  - is_selected = @selected_category == child
-                  = link_to child.display_name(I18n.locale), marketplace_category_path({category: child}), :class => "home-categories-sub #{if is_selected then 'selected' end}", :data => {:"sub-category" =>child.id}
-
-        #desktop-filters
-          - # Filters will be relocated here when in desktop
-
-  .col-9
-    - if @listings.total_entries > 0
-      - if @view_type.eql?("map")
-        .home-map
-          = render :partial => "map", locals: { viewport: viewport }
-      - else
-        %div{class: @category_menu_enabled ? "home-fluid-thumbnail-grid-narrow" : "home-fluid-thumbnail-grid-wide"}
-          .home-fluid-thumbnail-grid{:itemscope => "", :itemtype => "https://schema.org/ItemList"}
-            = render partial: "grid_item", collection: @listings, as: :listing, locals: { show_distance: location_search_in_use }
-        .home-loading-more
-          = will_paginate(@listings)
+  - if @listings.total_entries > 0
+    - if @view_type.eql?("map")
+      .home-map
+        = render :partial => "map", locals: { viewport: viewport }
     - else
-      .home-no-listings
-        - if params[:q] || params[:category] || params[:share_type] # Some filter in use
-          = t(".no_listings_with_your_search_criteria")
-        - else
-          = t(".no_listings_notification",
-                add_listing_link: link_to(t(".add_listing_link_text"),
-                new_listing_path(ref: "add_listing_link"))).html_safe
+      %div{class: @category_menu_enabled ? "home-fluid-thumbnail-grid-narrow" : "home-fluid-thumbnail-grid-wide"}
+        .home-fluid-thumbnail-grid{:itemscope => "", :itemtype => "https://schema.org/ItemList"}
+          = render partial: "grid_item", collection: @listings, as: :listing, locals: { show_distance: location_search_in_use }
+      .home-loading-more
+        = will_paginate(@listings)
+  - else
+    .home-no-listings
+      - if params[:q] || params[:category] || params[:share_type] # Some filter in use
+        = t(".no_listings_with_your_search_criteria")
+      - else
+        = t(".no_listings_notification",
+              add_listing_link: link_to(t(".add_listing_link_text"),
+              new_listing_path(ref: "add_listing_link"))).html_safe
