--- a/app/views/news/index.haml
+++ b/app/views/news/index.haml
@@ -2,24 +2,25 @@
 - content_for :title, "News, Reviews, and How-to's"
 - content_for :meta_description, "Read tack reviews, saddle reviews, tips & how-to's, and more."
 - content_for :keywords, "Equestrian news,Equestrian blog,Horse blog"
+
 = content_for :hero do
-  .hero-navigation
-    .row
+  .layout-column.layout-padding.layout-align-end-start.layout-fill.flex-offset-gt-xs-5
+    .flex-30.hero-brand.hide-xs.hide-sm
       %h1
         Tack Hunter News
-  .hero-feature-post
-    .row
-      .col-12
+    .flex.hero-title
+      %h1
         = link_to @featured_news_post.title.capitalize, news_path(@featured_news_post), class: "hero-feature-title"
-
-    .row
-      .col-12
-        %h2
-          By
-          = @featured_news_post.person.username
-    .row
-      .col-12
-        = link_to "Read Now", news_path(@featured_news_post), class: "button"
+    .flex.show-xs.show-sm
+    .flex.hero-subtitle
+      %h2
+        By
+        = @featured_news_post.person.username
+    
+    .flex.hero-cta
+      .row
+        .col-12
+          = link_to "Read Now", news_path(@featured_news_post), class: "button"
   .hero-feature-image{style: "background-image: url('#{@featured_news_post.image(:feature)}')"}
 .row.news-posts
   - @news_posts.each do |news_post|
