--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -3,27 +3,10 @@
 
 - content_for :coverfade_class do
   = "without-text"
-- content_for :extra_javascript do
-  - # maps.google can't be loaded twice
-  - key_param = "&key=AIzaSyBD0dCxEL8qLH4TLaRb5Hq76WR4V1ymtlI"
-  - if(location_search_in_use && @view_type.eql?("map"))
-    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places#{key_param}" unless feature_enabled?(:topbar_v1)
-    = javascript_include_tag "markerclusterer.js"
-  - elsif(location_search_in_use)
-    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places#{key_param}" unless feature_enabled?(:topbar_v1)
-  - elsif(@view_type.eql?("map"))
-    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places#{key_param}"
-    = javascript_include_tag "markerclusterer.js"
--# show the category name if  one is selected, otherwise show default tagline
 - if @selected_category
   - content_for :title, @selected_category.display_name(I18n.locale)
   - content_for :keywords, @selected_category.children.map{|c| c.display_name(I18n.locale)}.join(", ")
   - content_for :meta_description, "Find Great Deals On New And Used #{@selected_category.display_name(I18n.locale)}"
-- content_for :title_header do
-  .browse-view-search-form
-    = render partial: "search_bar"
-
-
 - #schema markup for homepage search in SERPS
 - content_for :extra_javascript do
   :plain
@@ -42,33 +25,35 @@
 
 
 - content_for :sidenav_left do
-  - if @show_categories
-    .row
-      .col-12
-        = link_to "All Categories", search_path(params.merge({category: "all"})), :class => "home-categories-main #{if @selected_category.nil? then 'selected' end}"
-        - @main_categories.each do |category|
-          - show_subcategories = show_subcategory_list(category, Maybe(@selected_category).id.to_i.or_else(nil))
-          = link_to category.display_name(I18n.locale), marketplace_category_path({category: category}), :class => "home-categories-main #{if show_subcategories then 'selected' end} #{if category.has_subcategories? then 'has-subcategories' end}", :data => {category: category.id}
+  .row
+    .col-12
+      %md-list{style: "margin: 0; padding: 0;"}
+        %md-list-item{role: "listItem", style: "margin: 0; padding: 0; height: 36px; min-height: 36px;"}
+          = link_to search_path, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0;" do
+            .md-list-item-inner{style: "margin: 0; padding: 0 16px; min-height: 36px;"}
+              All Categories
+      - @main_categories.each do |category|
+        - show_subcategories = show_subcategory_list(category, Maybe(@selected_category).id.to_i.or_else(nil))
+        %md-list-item{role: "listItem", style: "margin: 0; padding: 0; height: 36px; min-height: 36px;"}
+          = link_to marketplace_category_path({category: category}), :data => {category: category.id}, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0;" do
+            .md-list-item-inner{style: "margin: 0; padding: 0 16px; min-height: 36px;"}
+              = category.display_name(I18n.locale)
+
           - if category.children
             - if show_subcategories
               - category.children.each do |child|
                 - is_selected = @selected_category == child
-                = link_to child.display_name(I18n.locale), marketplace_category_path({category: child}), :class => "home-categories-sub #{if is_selected then 'selected' end}", :data => {:"sub-category" =>child.id}
-
-      #desktop-filters
-        #filters
-          = render :partial => "filters", :locals => { show_price_filter: show_price_filter, show_custom_fields: @show_custom_fields, filters: filters }
+                %md-list-item{role: "listItem", style: "margin: 0; padding: 0; height: 36px"}
+                  = link_to marketplace_category_path({category: child}), :data => {:"sub-category" =>child.id}, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0; min-height: 36px" do
+                    .md-list-item-inner{style: "margin: 0; padding: 0 16px;"}
+                      = child.display_name(I18n.locale)                
 .row
   - if @listings.total_entries > 0
-    - if @view_type.eql?("map")
-      .home-map
-        = render :partial => "map", locals: { viewport: viewport }
-    - else
-      %div{class: @category_menu_enabled ? "home-fluid-thumbnail-grid-narrow" : "home-fluid-thumbnail-grid-wide"}
-        .home-fluid-thumbnail-grid{:itemscope => "", :itemtype => "https://schema.org/ItemList"}
-          = render partial: "grid_item", collection: @listings, as: :listing, locals: { show_distance: location_search_in_use }
-      .home-loading-more
-        = will_paginate(@listings)
+    %div{class: "home-fluid-thumbnail-grid-narrow"}
+      .home-fluid-thumbnail-grid{:itemscope => "", :itemtype => "https://schema.org/ItemList"}
+        = render partial: "homepage/grid_item", collection: @listings, as: :listing
+    .home-loading-more
+      = will_paginate(@listings)
   - else
     .home-no-listings
       - if params[:q] || params[:category] || params[:share_type] # Some filter in use
