--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -3,10 +3,15 @@
   = render :partial => 'layouts/head'
   %body.layout-column
     = render partial: 'layouts/global_header', locals: header_props()
-    .layout-row.flex
+    - if content_for?(:sidenav_left)
+      - @layout_classes = "layout-row flex"
+    - else
+      - @layout_classes = ""
+    %div{class: "#{@layout_classes}"}
       - if content_for?(:sidenav_left)
-        %md-sidenav.ng-cloak.layout-column.layout-padding.bg-body.md-sidenav-left.md-locked-open{"md-is-locked-open": "$mdMedia('gt-sm')", "md-component-id": "left"}
+        %md-sidenav.ng-cloak.layout-column.bg-body.md-sidenav-left.md-locked-open{"md-is-locked-open": "$mdMedia('gt-sm')", "md-component-id": "left"}
           = yield :sidenav_left
+      - else
       %md-content.layout-padding.layout-column.layout-fill.flex.bg-body
         -# Render railsContext here before any react component gets rendered
         = prepend_render_rails_context("")
@@ -91,6 +96,6 @@
           $(document).ready(function() { initialize_defaults("#{I18n.locale}"); #{yield :javascript} });
 
         = render :partial => "layouts/noscript"
-    = render partial: "layouts/footer"
+  = render partial: "layouts/footer"
 
 
