--- a/app/views/listings/form/_send_button.haml
+++ b/app/views/listings/form/_send_button.haml
@@ -1,3 +1,4 @@
 = form.hidden_field(:category_id, :value => @listing.category_id)
+= form.hidden_field(:discipline_id, :value => @listing.discipline_id)
 = form.hidden_field(:listing_shape_id, :value => @listing.listing_shape_id)
 = form.button t(".save_listing"), :class => "send_button"
