--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -27,16 +27,11 @@
 - content_for :sidenav_left do
   .row
     .col-12
-      %md-list{style: "margin: 0; padding: 0;"}
-        %md-list-item{role: "listItem", style: "margin: 0; padding: 0; height: 36px; min-height: 36px;"}
-          = link_to search_path, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0;" do
-            .md-list-item-inner{style: "margin: 0; padding: 0 16px; min-height: 36px;"}
-              All Categories
       - @main_categories.each do |category|
         - show_subcategories = show_subcategory_list(category, Maybe(@selected_category).id.to_i.or_else(nil))
         %md-list-item{role: "listItem", style: "margin: 0; padding: 0; height: 36px; min-height: 36px;"}
           = link_to marketplace_category_path({category: category}), :data => {category: category.id}, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0;" do
-            .md-list-item-inner{style: "margin: 0; padding: 0 16px; min-height: 36px;"}
+            .md-list-item-inner{style: "font-size: 14px; margin: 0; padding: 0 24px; min-height: 36px;"}
               = category.display_name(I18n.locale)
 
           - if category.children
