--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -27,21 +27,23 @@
 - content_for :sidenav_left do
   .row
     .col-12
-      - @main_categories.each do |category|
-        - show_subcategories = show_subcategory_list(category, Maybe(@selected_category).id.to_i.or_else(nil))
-        %md-list-item{role: "listItem", style: "margin: 0; padding: 0; height: 36px; min-height: 36px;"}
-          = link_to marketplace_category_path({category: category}), :data => {category: category.id}, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0;" do
-            .md-list-item-inner{style: "font-size: 14px; margin: 0; padding: 0 24px; min-height: 36px;"}
-              = category.display_name(I18n.locale)
+      %md-list
+        - @main_categories.each do |category|
+          - show_subcategories = show_subcategory_list(category, Maybe(@selected_category).id.to_i.or_else(nil))
+          %md-list-item.layout-column{role: "listItem", style: "margin: 0; padding: 0; min-height: 36px;"}
+            = link_to marketplace_category_path({category: category}), :data => {category: category.id}, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0;" do
+              .md-list-item-inner{style: "font-size: 14px; margin: 0; padding: 0 24px; min-height: 36px; #{@selected_category.id == category.id ? 'font-weight: 700' : ''}"}
+                = category.display_name(I18n.locale)
 
-          - if category.children
-            - if show_subcategories
-              - category.children.each do |child|
-                - is_selected = @selected_category == child
-                %md-list-item{role: "listItem", style: "margin: 0; padding: 0; height: 36px"}
-                  = link_to marketplace_category_path({category: child}), :data => {:"sub-category" =>child.id}, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0; min-height: 36px" do
-                    .md-list-item-inner{style: "margin: 0; padding: 0 16px;"}
-                      = child.display_name(I18n.locale)                
+            - if category.children
+              - if show_subcategories
+                %md-list.layout-fill.layout-padding
+                  - category.children.each do |child|
+                    - is_selected = @selected_category == child
+                    %md-list-item.layout-column{role: "listItem", style: "margin: 0; padding: 0; min-height: 36px;"}
+                      = link_to marketplace_category_path({category: child}), :data => {:"sub-category" =>child.id}, class: "md-no-style md-button md-ink-ripple", style: "padding: 0; margin: 0;" do
+                        .md-list-item-inner{style: "font-size: 14px; margin: 0; padding: 0 24px; min-height: 36px;"}
+                          = child.display_name(I18n.locale)                
 .row
   - if @listings.total_entries > 0
     %div{class: "home-fluid-thumbnail-grid-narrow"}
